# zephyr-os-controller

./: .gitignore  README.md  checkpoint.md  checkpoint_2.0.md
docs/: 01-system-specification.md  02-firmware-architecture.md  03-state-machines.md  04-design-decisions.md  05-future-work.md  05-validation-plan.md
docs/diagrams/: .$StateMachines.drawio.bkp  .$power_status_manager.drawio.bkp  StateMachines.drawio  cooling_manager.drawio  led_representation_manager.drawio  power_status_manager.drawio
firmware/: firmware-esp32-README.md
firmware/stm32/: firmware-stm32-README.md  platformio.ini
firmware/stm32/src/: main.c
firmware/stm32/src/drivers/: matrix_keypad.c  matrix_keypad.h  ntc_sensor.c  ntc_sensor.h  shift_register.c  shift_register.h
firmware/stm32/src/protocol/: uart_packet.c  uart_packet.h
firmware/stm32/src/state/: config_state.c  config_state.h  control_state.c  control_state.h  system_state.c  system_state.h  telemetry_state.c  telemetry_state.h  transmission_state.c  transmission_state.h
firmware/stm32/src/tasks/: cooling_manager.c  cooling_manager.h  esp32_comm_manager.c  esp32_comm_manager.h  heater_simulation_task.c  heater_simulation_task.h  led_representation_manager.c  led_representation_manager.h  power_status_manager.c  power_status_manager.h  ui_keypad_task.c  (+3 more)
firmware/stm32/zephyr/: CMakeLists.txt  prj.conf
firmware/stm32/zephyr/boards/: nucleo_l476rg.overlay
hardware/: .$wiring-diagrams.drawio.bkp  bom.md  wiring-diagrams.drawio
references/datasheets/ventilador/: timer-pwm-stm32-zephyr.md
references/ventilador/: etapa_potencia.md
